--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue": "^3.2.47",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
+    "vue3-lottie": "^2.5.0",
     "vuetify": "^3.1.15",
     "webfontloader": "^1.6.28"
   },
