--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --fix --ignore-path .gitignore"
+    "lint": "eslint . --fix --ignore-path .gitignore",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@mdi/font": "^7.2.96",
+    "@saofeng_cyber/pinia-sf-persistence-storage": "^1.0.9",
     "@vueuse/core": "^10.1.0",
     "apexcharts": "^3.39.0",
-    "crypto-js": "^4.1.1",
+    "axios": "^1.3.6",
     "echarts": "^5.4.2",
     "moment": "^2.29.4",
     "pinia": "^2.0.35",
-    "pinia-sf-storage": "^1.0.6",
     "roboto-fontface": "^0.10.0",
     "vue": "^3.2.47",
     "vue-i18n": "^9.2.2",
@@ -26,6 +27,8 @@
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.6.1",
+    "@commitlint/config-conventional": "^17.6.1",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.15.13",
@@ -34,6 +37,7 @@
     "@vue/eslint-config-typescript": "^11.0.2",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
+    "husky": "^8.0.3",
     "sass": "^1.62.0",
     "typescript": "^5.0.4",
     "unplugin-auto-import": "^0.15.3",
