--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "vuetify-project",
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix --ignore-path .gitignore",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "commit": "git cz"
   },
   "dependencies": {
     "@mdi/font": "^7.2.96",
@@ -18,6 +18,7 @@
     "echarts": "^5.4.2",
     "moment": "^2.29.4",
     "pinia": "^2.0.35",
+    "prettier": "2.8.8",
     "roboto-fontface": "^0.10.0",
     "vue": "^3.2.47",
     "vue-i18n": "^9.2.2",
@@ -33,9 +34,18 @@
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.15.13",
     "@types/webfontloader": "^1.6.35",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
     "@vitejs/plugin-vue": "^4.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
+    "commitizen": "^4.3.0",
+    "commitlint": "^17.6.1",
+    "commitlint-config-gitmoji": "^2.3.1",
+    "cz-customizable": "^7.0.0",
+    "cz-emoji-conventional": "^1.0.1",
     "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.11.0",
     "husky": "^8.0.3",
     "sass": "^1.62.0",
@@ -45,5 +55,10 @@
     "vite": "^4.3.1",
     "vite-plugin-vuetify": "^1.0.2",
     "vue-tsc": "^1.4.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-emoji-conventional"
+    }
   }
 }
