--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@vueuse/core": "^10.1.0",
     "apexcharts": "^3.39.0",
     "axios": "^1.3.6",
+    "commitlint-config-git-commit-emoji": "^1.0.0",
+    "commitlint-config-gitmoji": "^2.3.1",
     "echarts": "^5.4.2",
     "moment": "^2.29.4",
     "pinia": "^2.0.35",
