--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "vuetify-project",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix --ignore-path .gitignore",
     "prepare": "husky install",
-    "commit": "git cz"
+    "commit": "git cz",
+    "changelog": "conventional-changelog -p cz-config.js -i CHANGELOG.md -s -r 0"
   },
   "dependencies": {
     "@mdi/font": "^7.2.96",
@@ -42,6 +43,8 @@
     "@vue/eslint-config-typescript": "^11.0.2",
     "commitizen": "^4.3.0",
     "commitlint": "^17.6.1",
+    "conventional-changelog": "^3.1.25",
+    "conventional-changelog-cli": "^2.2.2",
     "cz-customizable": "^7.0.0",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
