--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "lint": "eslint . --fix --ignore-path .gitignore",
     "prepare": "husky install",
     "commit": "git cz",
-    "changelog": "conventional-changelog -p cz-config.js -i CHANGELOG.md -s -r 0"
+    "changelog": "conventional-changelog -i CHANGELOG.md -s -r 0"
   },
   "dependencies": {
     "@mdi/font": "^7.2.96",
-    "@saofeng_cyber/pinia-sf-persistence-storage": "^1.0.9",
+    "@saofeng_cyber/pinia-sf-persistence-storage": "^2.0.0",
     "@vueuse/core": "^10.1.0",
     "apexcharts": "^3.39.0",
     "axios": "^1.3.6",
@@ -40,6 +40,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "@vitejs/plugin-vue": "^4.1.0",
+    "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "commitizen": "^4.3.0",
     "commitlint": "^17.6.1",
