--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "commitlint-config-gitmoji": "^2.3.1",
     "echarts": "^5.4.2",
     "moment": "^2.29.4",
+    "openai": "^3.2.1",
     "pinia": "^2.0.35",
     "prettier": "2.8.8",
     "roboto-fontface": "^0.10.0",
