--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "commitlint-config-git-commit-emoji": "^1.0.0",
     "commitlint-config-gitmoji": "^2.3.1",
     "echarts": "^5.4.2",
+    "highlight.js": "^11.7.0",
     "moment": "^2.29.4",
     "openai": "^3.2.1",
     "pinia": "^2.0.35",
@@ -29,6 +30,7 @@
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
     "vue3-lottie": "^2.5.0",
+    "vue3-markdown-it": "^1.0.10",
     "vuetify": "^3.1.15",
     "webfontloader": "^1.6.28"
   },
