✨ feat(custom): 添加路由配置，修改样式配置，修改eslint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,10 @@
     "noEmit": true,
     "paths": {
       "@/*": [
-       "src/*"
+        "src/*"
       ]
-     },
-     "types": ["node", "vite/client"],
+    },
+    "types": ["node", "vite/client"]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "custom/*.ts"],
   "references": [{ "path": "./tsconfig.node.json" }],
