--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,7 @@
 {
-    "semi": true,
+    "semi": false,
     "tabWidth": 2,
     "endOfLine": "auto",
     "printWidth": 80,
-    "singleQuote": false
+    "singleQuote": true
 }
