--- a/package.json
+++ b/package.json
@@ -35,26 +35,21 @@
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.38.6",
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.15.13",
     "@types/webfontloader": "^1.6.35",
-    "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@typescript-eslint/parser": "^5.59.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@vitejs/plugin-vue": "^4.1.0",
-    "@vue/eslint-config-prettier": "^7.1.0",
-    "@vue/eslint-config-typescript": "^11.0.2",
     "commitizen": "^4.3.0",
     "commitlint": "^17.6.1",
     "conventional-changelog": "^3.1.25",
     "conventional-changelog-cli": "^2.2.2",
     "cz-customizable": "^7.0.0",
     "eslint": "^8.39.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.11.0",
     "husky": "^8.0.3",
     "sass": "^1.62.0",
     "typescript": "^5.0.4",
